<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_pressed"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bar_color">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_back_selector"
            android:onClick="onClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/title_activity_sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/title_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_accountw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/writepressed"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/account"
            android:textColor="@color/dark_gray_text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_mobile"
            android:layout_width="0sp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/prompt_account"
            android:inputType="none"
            android:maxLength="11"
            android:maxLines="1"
            android:textColor="@color/dark_gray_text"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/writepressed"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/nickname"
            android:textColor="@color/dark_gray_text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0sp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/prompt_nickname"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/dark_gray_text"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_accounts"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/writepressed"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/password"
            android:textColor="@color/dark_gray_text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/dark_gray_text"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_accountsss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/writepressed"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:text="@string/password"
            android:textColor="@color/dark_gray_text"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_surepwd"
            android:layout_width="0sp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="@color/dark_gray_text"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/makesure_register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/btn_login"
            android:onClick="onClick"
            android:text="@string/sign_up" />
    </RelativeLayout>

</LinearLayout>